RESOLVED FIXED71161
Overflow and relayout are broken in the new flexboxes
https://bugs.webkit.org/show_bug.cgi?id=71161
Summary Overflow and relayout are broken in the new flexboxes
Ojan Vafai
Reported 2011-10-28 17:01:15 PDT
Overflow and relayout are broken in the new flexboxes
Attachments
Patch (7.90 KB, patch)
2011-10-28 17:04 PDT, Ojan Vafai
no flags
Patch (7.93 KB, patch)
2011-11-03 13:26 PDT, Ojan Vafai
hyatt: review+
Ojan Vafai
Comment 1 2011-10-28 17:04:20 PDT
Tony Chang
Comment 2 2011-10-31 10:04:17 PDT
Comment on attachment 112943 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=112943&action=review > Source/WebCore/rendering/RenderFlexibleBox.cpp:683 > + bool shouldFlipMainAxis = isColumnFlow() ? false : !isLeftToRightFlow(); Nit: This may read easier as isHorizontalFlow() && !isLeftToRightFlow().
Ojan Vafai
Comment 3 2011-11-03 13:23:59 PDT
(In reply to comment #2) > (From update of attachment 112943 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=112943&action=review > > > Source/WebCore/rendering/RenderFlexibleBox.cpp:683 > > + bool shouldFlipMainAxis = isColumnFlow() ? false : !isLeftToRightFlow(); > > Nit: This may read easier as isHorizontalFlow() && !isLeftToRightFlow(). This isn't actually equivalent, e.g. this would return true for flex-flow:column + writing-mode:horizontal-tb but the above always returns false for flex-flow:column. I guess I should rewrite it as: !isColumnFlow() && !isLeftToRightFlow().
Ojan Vafai
Comment 4 2011-11-03 13:26:29 PDT
Dave Hyatt
Comment 5 2011-11-15 12:51:09 PST
Comment on attachment 113547 [details] Patch r=me
Ojan Vafai
Comment 6 2011-11-15 14:25:35 PST
Peter Kasting
Comment 7 2011-11-15 15:45:00 PST
Ojan, it looks like css3/flexbox/repaint-rtl-column.html, for which you added a Snow Leopard expected result, is also failing on Win/Linux (see http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=css3%2Fflexbox%2Frepaint-rtl-column.html ). Should this just be rebaselined?
Ojan Vafai
Comment 8 2011-11-15 16:07:24 PST
Yup. Rebaselining now.
Note You need to log in before you can comment on or make changes to this bug.