Overflow and relayout are broken in the new flexboxes https://bugs.webkit.org/show_bug.cgi?id=71161

Reviewed by David Hyatt.

Source/WebCore:

Tests: css3/flexbox/auto-height-dynamic.html
       css3/flexbox/flex-item-child-overflow-expected.html
       css3/flexbox/flex-item-child-overflow.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutBlock):
-Always set the logical height to 0 to start with to ensure we don't
use the height from the previous layout when we are computing the
intrinsic size of the flexbox.
-Call computeOverflow after computeLogicalHeight so that flex-item's children's
overflow is properly rendered.

(WebCore::RenderFlexibleBox::layoutAndPlaceChildrenInlineDirection):
-Now that we setLogicalHeight in layoutBlock, we no longer need to do it here.
-Refactor flipping code. The behavior is the same, but the variable names are just
more correct.

LayoutTests:

* css3/flexbox/auto-height-dynamic-expected.txt: Added.
* css3/flexbox/auto-height-dynamic.html: Added.
* css3/flexbox/flex-item-child-overflow-expected.html: Added.
* css3/flexbox/flex-item-child-overflow.html: Added.

Canonical link: https://commits.webkit.org/88865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100324 268f45cc-cd09-0410-ab3c-d52691b4dbfc